Done, to be tested:
---------------------------
ToDo
---------------------
* Less annoying Admin-Bubbles (requires custom bubble tip window class)
* GUI for SwitchToUser
* Console SuRun support
* Create a "Default" SuRunner for users that are not in "SuRunners"
* GUI for FUS
* Checksums for "Always Yes" programs
* Windows 7 compatibility
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* icons for SuRuns contex menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin
* Intercept "rundll32.exe newdev.dll,": 
    needs CredUI hack for XP/2k3; ok with 2k and Vista
    use "HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Image File 
    Execution Options\Rundll32.exe",Debugger,C:\Windows\SuRun.exe /AUTORUN

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.0.7 Beta 13 - 2009-08-26:
-----------------------------------
* NEW: SuRun uses a local helper account to create the elevated token.
    Now the policy editor and and the user account management of the control 
    panel work for elevated SuRunners.
* CHG: If blank password use is disabled, SuRun shows a less agressive 
    "The following Administrator accounts have no password" warning
* CHG: SuRun no more uses AppInit_DLLs registry key
* CHG: Removed option "set a hook into services and administrative processes."
* CHG: Installer does not require reboot in Vista++
* CHG: The SuRun service injects SuRunExt.dll into services.exe to enable
    installing hardware without entering an admin password on the user desktop